--- a/1.10.3-alpine/Dockerfile
+++ b/1.10.3-alpine/Dockerfile
@@ -2,4 +2,5 @@ FROM nginx:1.10.3-alpine
 
 ENV LOGROTATE_VERSION 3.9.2-r0
 
-RUN apk add --no-cache logrotate
+RUN apk add --no-cache logrotate tzdata \
+    && cp -r -f /usr/share/zoneinfo/Hongkong /etc/localtime
